# Ubuntu

./: CMakeLists.txt  Ubuntu.bat  UbuntuScript.sh  WinScript.bat  WinScript.cmd  main  main.cpp
1Laba/: 1Laba.cpp  CMakeLists.txt  UbuntuScript.sh  WinScript.cmd
1Laba/build_ubuntu/: 1Laba  CMakeCache.txt  Makefile  cmake_install.cmake
1Laba/build_windows/: 1Laba.sln  1Laba.vcxproj  1Laba.vcxproj.filters  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  Ubuntu.sln  Ubuntu.vcxproj  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
1Laba/build_windows/1Laba.dir/Debug/: 1Laba.exe.recipe  1Laba.ilk
1Laba/build_windows/Ubuntu.dir/Debug/: Ubuntu.exe.recipe  Ubuntu.ilk
2Laba/: 2Laba.cpp  CMakeLists.txt  process_launcher.cpp  process_launcher.h
2Laba/build_ubuntu/: CMakeCache.txt  Makefile  Ubuntu  cmake_install.cmake
2Laba/build_windows/: 2Laba.sln  2Laba.vcxproj  2Laba.vcxproj.filters  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  Ubuntu.sln  Ubuntu.vcxproj  Ubuntu.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  process_launcher.vcxproj  process_launcher.vcxproj.filters
2Laba/build_windows/2Laba.dir/Debug/: 2Laba.exe.recipe  2Laba.ilk
2Laba/build_windows/Debug/: process_launcher.lib
2Laba/build_windows/Ubuntu.dir/Debug/: Ubuntu.exe.recipe  Ubuntu.ilk
2Laba/build_windows/process_launcher.dir/Debug/: process_launcher.lib.recipe
3Laba/: 3Laba.cpp  CMakeLists.txt
3Laba/Logs/: logs.txt
3Laba/Logs/Win/: logs.txt
3Laba/build_ubuntu/: 3Laba  CMakeCache.txt  Makefile  cmake_install.cmake
3Laba/build_windows/: 3Laba.sln  3Laba.vcxproj  3Laba.vcxproj.filters  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
3Laba/build_windows/3Laba.dir/Debug/: 3Laba.exe.recipe  3Laba.ilk
3Laba/build_windows/3Laba.dir/Debug/3Laba.tlog/: 3Laba.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
3Laba/build_windows/Debug/: log.txt
3Laba/build_windows/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
3Laba/build_windows/x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog
3Laba/build_windows/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
3Laba/build_windows/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
4Laba/: 4Laba.cpp  CMakeLists.txt  my_serial.hpp  script for run.cmd  temperature_simulator.cpp
4Laba/build_ubuntu/: 4Laba  CMakeCache.txt  Makefile  Ubuntu  cmake_install.cmake  temperature_simulator
4Laba/build_windows/: 4Laba.vcxproj  4Laba.vcxproj.filters  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  Ubuntu.sln  Ubuntu.vcxproj  Ubuntu.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  receiver.vcxproj  sender.vcxproj  temperature_simulator.vcxproj  temperature_simulator.vcxproj.filters
4Laba/build_windows/4Laba.dir/Debug/: 4Laba.exe.recipe  4Laba.ilk
4Laba/build_windows/Ubuntu.dir/Debug/: Ubuntu.exe.recipe  Ubuntu.ilk
5Laba/: 5Laba.cpp  CMakeLists.txt  temperature.db  temperature_simulator.cpp
5Laba/Libs/SQLite/: sqlite3.lib
5Laba/build_ubuntu/: 5Laba  CMakeCache.txt  Makefile  Ubuntu  cmake_install.cmake  temperature_simulator
5Laba/build_windows/: 5Laba.sln  5Laba.vcxproj  5Laba.vcxproj.filters  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  Ubuntu.sln  Ubuntu.vcxproj  Ubuntu.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  temperature_simulator.vcxproj  temperature_simulator.vcxproj.filters
5Laba/build_windows/5Laba.dir/Debug/: 5Laba.exe.recipe
5Laba/build_windows/5Laba.dir/Debug/5Laba.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
5Laba/build_windows/Ubuntu.dir/Debug/: Ubuntu.exe.recipe
5Laba/build_windows/Ubuntu.dir/Debug/Ubuntu.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.write.1.tlog  Ubuntu.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
5Laba/build_windows/temperature_simulator.dir/Debug/: temperature_simulator.exe.recipe  temperature_simulator.ilk
5Laba/build_windows/temperature_simulator.dir/Debug/temperat.2EFA6740.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
5Laba/build_windows/temperature_simulator.dir/Debug/temperat.D11E1A43.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.read.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
5Laba/build_windows/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
5Laba/build_windows/x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: ALL_BUILD.lastbuildstate  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
5Laba/build_windows/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
5Laba/build_windows/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
5Laba/db/: database.db  db_handler.cpp  db_handler.h
5Laba/http/: index.html  server.cpp  server.h
5Laba/web-service/: app.js  index.html  styles.css
build_ubuntu/: CMakeCache.txt  Makefile  Ubuntu  cmake_install.cmake
build_windows/: ALL_BUILD.vcxproj  CMakeCache.txt  Ubuntu.sln  Ubuntu.vcxproj  Ubuntu.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  process_launcher.vcxproj  process_launcher.vcxproj.filters
build_windows/Debug/: process_launcher.lib  temperature.db
build_windows/Ubuntu.dir/Debug/: Ubuntu.exe.recipe  Ubuntu.ilk
build_windows/process_launcher.dir/Debug/: process_launcher.lib.recipe
(+151 files in other folders)
